# python-versioning

./: .gitignore  CHANGELOG.md  LICENSE-MIT  README.md  pyproject.toml  version.py
src/: __init__.py  duration.py  evaluated.py  extEnums.py  extInt.py  file.py  notGiven.py  numberOrdinal.py  percentage.py  precision.py  progress.py  taskDuration.py  timeRemaining.py  timeSince.py  timeUntil.py  types.py  version.py
src/data/: mergeList.py  prettyPrint.py  serialization.py  splitList.py
src/datetime/: duration.py  elapsed.py  remaining.py
src/number/: extFloat.py  numberOrdinal.py  percentage.py  precision.py  progress.py  ratio.py  valueBetween.py
src/standard/: cleanPath.py
tests/: test.py
