[project]
name = "Version"
version = "1.0.0"
description = "Semantic Version Handling"
license = "BSD-3-Clause"
authors = [ 
  { name = "rkohl"}
]
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
packages = ["version"]
package-dir = {"version" = "src"}

[tool.ruff.format]
indent-style = "space"
indent-size = 2
quote-style = "double"

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = ["I"]
extend-select = ["I"]

[tool.pyright]
useLibraryCodeForTypes = true
include = ["src"]
exclude = [".cache", "tests"]
pythonVersion = "3.12"
indentSize = 2
indentStyle = "space"
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportMissingImports = true
