[project]
name = "python-versioning"
version = "1.1.0"
readme = "README.md"
license = "MIT"
description = "A lightweight Python library implementation for parsing, comparing, and managing semantic version strings."
authors = [ 
  { name = "rkohl"}
]
keywords = [
  "version",
  "semantic",
  "semver",
  "versioning",
  "semantic versioning",
  "semantic version",
  "semantic version parser",
  "semantic version comparator",
  "python",
  "version tracking",
  "version management",
  "version control",
  "version comparison",
  "major version",
  "minor version",
  "patch version",
  "pre-release version",
  "build metadata",
  "version string",
  "ver number",
  "ver"
  ]
  
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
packages = ["version"]
package-dir = {"version" = "src"}